manifests/service-c/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service-c
  name: service-c
spec:
  selector:
    app: service-c
  ports:
  - name: http
    port: 8080
