manifests/service-c/manifests/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-c
spec:
  gateways:
    - mesh
  hosts:
    - service-c
  http:
    - route:
      - destination:
          host: service-c
          port: 
            number: 8080
